# VELOC

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  LICENSE  Makefile  NOTICE  README  README.md  api.c  auto-install.py  bootstrap.sh  buildme  buildme_deps  buildme_veloc  cleanup.sh  configure.sh  fti.c  fti.h  heatdis_file.c  heatdis_memfile.c  heatdis_veloc.c  install_boost.sh  interface.h  runme  veloc.c  veloc.h
.gitlab/: gitlab-ci-olcf.yml
cmake/: FindAXL.cmake  FindDAOS.cmake  FindER.cmake  FindKVTREE.cmake  FindRANKSTR.cmake  VELOC_ADD_TEST.cmake  VELOC_ADD_TEST.cmake.DEBUG  VELOC_ADD_TEST.cmake.PARALLEL_WORKS  VELOC_ADD_TEST.cmake.SAV  VELOC_ADD_TEST_RESTART_FROM_OTHER_NODES.cmake  VELOC_ADD_TEST_RESTART_FROM_OTHER_NODES.cmake.DEBUG  VELOC_ADD_TEST_RESTART_FROM_OTHER_NODES.cmake.SAV  velocConfig.cmake.in
docs/: .readthedocs.org  .readthedocs.yaml  Makefile  api.rst  conf.py  design.rst  index.rst  project.rst  quick.rst  toc.rst  userguide.rst
docs/_templates/: custom_sidebar.html
include/: interface.h  veloc.h  veloc.hpp  veloc.mod  veloc_defs.h  veloc_mem.h  veloc_types.h
include/veloc/: bitsery.hpp  boost.hpp  cache.hpp  cereal.hpp  defs.h
scripts/: CMakeLists.txt
scripts/ALPS/: veloc_aprun.in  veloc_list_down_nodes.in
scripts/LSF/: veloc_env.in  veloc_jsrun.in  veloc_list_down_nodes.in
scripts/SLURM/: veloc_env.in  veloc_list_down_nodes.in  veloc_srun.in
scripts/common/: CMakeLists.txt  veloc_check_node.in  veloc_glob_hosts.in  veloc_hostlist.pm
src/: CMakeLists.txt  veloc.c  veloc.h
src/backend/: CMakeLists.txt  client_watchdog.cpp  client_watchdog.hpp  driver_module.cpp  driver_module.hpp  main.cpp  module_manager.cpp  module_manager.hpp  posix_transfer.hpp  topology.cpp  topology.hpp  work_queue.cpp  work_queue.hpp
src/bindings/: CMakeLists.txt
src/bindings/python/: CMakeLists.txt  setup.py  test-numpy.py  test-pickle.py  test.py
src/bindings/python/veloc/: __init__.py
src/common/: INIReader.h  cache_strategy.hpp  chunk_stream.cpp  chunk_stream.hpp  ckpt_util.cpp  ckpt_util.hpp  comm_queue.in  command.cpp  command.hpp  config.cpp  config.hpp  debug.hpp  file_provider.cpp  file_provider.hpp  file_util.cpp  file_util.hpp  ipc_queue.hpp  logger_state.hpp  socket_queue.hpp  status.hpp  thallium_queue.hpp  transfer_engine.cpp  transfer_engine.hpp
src/common/gpu/: cuda_provider.cpp  gpu_provider.hpp
src/fortran/: CMakeLists.txt  interfaceVeloc.F90  velocf.c  velocf.h
src/lib/: CMakeLists.txt  cache.cpp  client.cpp  client.hpp  posix_cache.cpp  posix_cache.hpp  veloc.c  veloc.cpp  veloc.hpp
src/modules/: CMakeLists.txt  chksum_module.cpp  chksum_module.hpp  client_aggregator.cpp  client_aggregator.hpp  client_watchdog.cpp  client_watchdog.hpp  daos_module.cpp  daos_module.hpp  ec_module.cpp  ec_module.hpp  module_manager.cpp  module_manager.hpp  transfer_module.cpp  transfer_module.hpp  versioning_module.cpp  versioning_module.hpp
src/storage/: axl_module.cpp  axl_module.hpp  daos_module.cpp  daos_module.hpp  posix_agg_module.cpp  posix_agg_module.hpp  posix_module.cpp  posix_module.hpp  storage_module.cpp  storage_module.hpp
src/tools/: CMakeLists.txt  veloc-inspect.cpp
src/vmem/: checkpoint.c  conf.c  dictionary.h  galois.c  interface.h  jerasure.c  meta.c  postckpt.c  postreco.c  recover.c  tools.c  topo.c  vmem_api.c
src/vmem/fortran/: ftif.c  ftif.h  interface.F90.bpp
test/: CMakeLists.txt  CMakeLists.txt.Bogdan  CMakeLists.txt.DEBUG  CMakeLists_lsf.txt  CMakeLists_slurm.txt  build_exec.sh  config.vec  cpp_test.cpp  fheatdis.f90  heatdis.c  heatdis.cfg  heatdis.h  heatdis.in  heatdis_common.c  heatdis_fault.cpp  heatdis_fault.cpp.BAK  heatdis_file.c  heatdis_gpu.cu  heatdis_mem.c  heatdis_memfile.c  heatdis_original.c  kill_backend.sh  list_scratch_dirs.sh  perf_results.csv  runme.sh  serial_test.cpp  start_backend_parallel.sh  start_backend_serial.sh  test-async.in  test-async.sh  test-cpp.in  test_cleanup.sh  test_cleanup_lsf.sh  test_cleanup_slurm.sh  test_list_dev_shm.sh  test_simulate_multilevel_corruption.sh  test_simulate_multilevel_corruption_lsf.sh  test_simulate_multilevel_corruption_slurm.sh  test_simulate_node_file_loss.sh  test_simulate_node_file_loss_lsf.sh  (+20 more)
